--- a/frontend/src/utilities.css
+++ b/frontend/src/utilities.css
@@ -22,3 +22,26 @@
   --orange: #ff8601;
   --blue: #2c2849;
 }
+
+.nav-container{
+  justify-content: space-evenly;
+  align-items: center;
+  height: 80px;
+  background-color: var(--blue);
+  color: rgba(245, 245, 245, 0.877);
+  font-size: 20px;
+}
+
+.selected{
+  color: white;
+  border-bottom: 5px solid white;
+  padding-bottom: 5px;
+  font-size: 21px;
+}
+
+.nav-item:hover{
+  color: white;
+  border-bottom: 5px solid white;
+  padding-bottom: 5px;
+  font-size: 21px;
+}
